--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -27,8 +27,7 @@
                     <input type="text" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" required
                         style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: var(--radius-md);">
                     {% if form.username.errors %}
-                    <div style="color: var(--danger-color); font-size: 0.85rem; margin-top: 0.25rem;">{{
-                        form.username.errors.0 }}</div>
+                    <div style="color: var(--danger-color); font-size: 0.85rem; margin-top: 0.25rem;">{{ form.username.errors.0 }}</div>
                     {% endif %}
                 </div>
 
@@ -38,8 +37,7 @@
                         required
                         style="width: 100%; padding: 0.75rem; border: 1px solid var(--border-color); border-radius: var(--radius-md);">
                     {% if form.password.errors %}
-                    <div style="color: var(--danger-color); font-size: 0.85rem; margin-top: 0.25rem;">{{
-                        form.password.errors.0 }}</div>
+                    <div style="color: var(--danger-color); font-size: 0.85rem; margin-top: 0.25rem;">{{ form.password.errors.0 }}</div>
                     {% endif %}
                 </div>
 
